<resources>
    <string name="app_name">ITFS</string>
    <string name="heading_addTourSpot">Add New Tour Spot</string>
    <string name="button_addTourSpot">Add Tour Spot</string>

    <string name="hint_tourSpotTitle">Title</string>
    <string name="hint_tourSpotCounty">County</string>
    <string name="hint_tourSpotDescription">Description</string>
    <string name="hint_tourSpotLatitude">Latitude</string>
    <string name="hint_tourSpotLongitude">Longitude</string>
    <string name="hint_tourSpotContact">Contact Information</string>
    <string name="hint_tourSpotOpen">Opening Time</string>
    <string name="hint_tourSpotClose">Closing Time</string>
    <string name="hint_tourSpotTicket">Ticket Required</string>

    <string name="menu_addTourSpot">Add</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_update">Update</string>
    <string name="update_tourSpot">Update</string>
    <string name="add_image">Add Image</string>
    <string name="update_image">Update Image</string>
    <string name="title_activity_test">test</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_map">MapActivity</string>
</resources>